Use virtual threads
Thank you Jena for the contribution!